@@ -126,7 +126,8 @@ public class RingProvider
 
     protected StorageJmxOperations initializeStorageOps()
     {
-        return jmxClient.proxy(StorageJmxOperations.class, STORAGE_SERVICE_OBJ_NAME);
+        return new GossipDependentStorageJmxOperations(jmxClient.proxy(StorageJmxOperations.class,
+                                                                       STORAGE_SERVICE_OBJ_NAME));
     }
 
     /**
